--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,3 +16,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: us-east-1
+      - name: terraform initiate
+        run: terraform init
+      - name: terraform apply
+        run: terraform apply --auto-approve
